<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textViewPergunta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/text_view_pergunta"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold|italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <RadioGroup
        android:id="@+id/radioGroupAlternativas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButtonOpt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/radio_button_opt1"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/radioButtonOpt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/radio_button_opt2"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/radioButtonOpt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/radio_button_opt3"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioButton
            android:id="@+id/radioButtonOpt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/radio_button_opt4"
            android:textSize="18sp"
            android:textStyle="italic" />
    </RadioGroup>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/buttonResponder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:onClick="responder"
        android:text="@string/button_responder"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic" />
</LinearLayout>
