<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/titulo"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:textSize="40sp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:src="@drawable/friend_hand"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:onClick="iniciarQuiz"
        android:text="@string/button_iniciar_quiz"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/buttonRanking"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:onClick="irParaORanking"
        android:text="@string/button_ranking"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/icons8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textAlignment="center" />
</LinearLayout>
