<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ResultadoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="20dp">

        <RatingBar
            android:id="@+id/ratingBarPontuaco"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="5.0"
            android:stepSize="0.5" />

        <TextView
            android:id="@+id/textViewResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_view_resultado"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/edit_text_nome"
        android:inputType="textPersonName"
        android:maxLength="20">

        <requestFocus />
    </EditText>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:onClick="irParaORanking"
        android:text="@string/button_ranking"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic" />
</LinearLayout>